# snoop

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/: calculator.py  main.py
static/: index.html
tests/: test_main.py
