[project]
name = "snoop"
version = "0.1.0"
description = "Initial repository scaffold for snoop"
authors = [ { name = "Ruben Perez", email = "you@example.com" } ]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
	"flake8>=4.0",
	"pytest>=7.0"
]
